# pxp

./: README.md  benchmark_hosts.py  example.py  pyproject.toml
src/mmorpg/: __init__.py  batch_runner.py  local_mp.py  slurm_job_array.sbatch  tools.py  uplink.py
src/xp/: slurm_job_array.sbatch
tests/: test_dict_prod.py  test_example.py  test_multiprocessing.py  test_paths.py  test_persistence.py  test_uplink.py
