[project]
name = "MMORPG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "patnr", email = "patrick.n.raanes@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pathos>=0.3.4",
    "sparse==0.15.4",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
    "matrepr>=1.0.1",
    "mplcyberpunk>=0.7.6",
    "numba>=0.54",
    "numpy>=2.3.5",         # https://github.com/numpy/numpy/issues/29820
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    # "N",      # pep8-naming
    "UP",     # pyupgrade
    # "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    # "SIM",    # flake8-simplify
    # "NPY",    # numpy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mmorpg"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
# Pytest configuration
markers = [
    "slow: marks tests as slow (deselected by default, use -m slow to run)",
    "integration: marks tests as integration tests",
]
# By default, exclude slow tests. To run them: pytest -m slow or pytest -m "slow or not slow"
addopts = "-m 'not slow'"
